C2 crashed: assert(_callee == nullptr || _callee == m) failed: repeated inline attempt with different callee

XMLWordPrintable

    • b19

      Test: applications/ctw/modules/java_xml.java

      java.lang.AssertionError: There were 1 errors:[{modules_java_xml_0: failed during compilation of class #391 : com/sun/org/apache/xalan/internal/xsltc/compiler/ApplyImports}]
      at sun.hotspot.tools.ctw.CtwRunner.run(CtwRunner.java:144)
      at sun.hotspot.tools.ctw.CtwRunner.main(CtwRunner.java:75)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
      at java.base/java.lang.Thread.run(Thread.java:1447)

      But we have a crash log:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S96035/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3e3b240a-5d3b-4bad-b033-d902bc24a635/runs/fc7157a7-3ab9-4fc6-8093-82dbfc573914/workspace/open/src/hotspot/share/opto/callGenerator.cpp:473), pid=9144, tid=9277
      # assert(_callee == nullptr || _callee == m) failed: repeated inline attempt with different callee
      #
      # JRE version: Java(TM) SE Runtime Environment (25.0+20) (fastdebug build 25-ea+20-LTS-2343)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+20-LTS-2343, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x94789e] LateInlineVirtualCallGenerator::set_callee_method(ciMethod*)+0x4e
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/1115c4e2-181d-4f4d-866f-faedfa24d464-S699/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/585472ee-28a5-4631-86cb-4ad2b8e2597b/runs/27013d4f-cabe-40b3-b42c-504a41027750/testoutput/test-support/jtreg_open_test_hotspot_jtreg_ctw_3/scratch/3/core.9144)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/24/36/bundles/linux-x64/jdk-24_linux-x64_bin.tar.gz/jdk-24 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/1115c4e2-181d-4f4d-866f-faedfa24d464-S699/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/585472ee-28a5-4631-86cb-4ad2b8e2597b/runs/27013d4f-cabe-40b3-b42c-504a41027750/testoutput/test-support/jtreg_open_test_hotspot_jtreg_ctw_3/tmp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -Djava.awt.headless=true -Xbatch -XX:-ShowMessageBoxOnError -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+DisplayVMOutputToStderr -DCompileTheWorldStartAt=0 -DCompileTheWorldStopAt=2133 -XX:+WhiteBoxAPI -Xbootclasspath/a:. --add-exports=java.base/jdk.internal.jimage=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/jdk.internal.access=ALL-UNNAMED -XX:+LogCompilation -XX:LogFile=hotspot_modules_java_xml_0_%p.log -XX:ErrorFile=hs_err_modules_java_xml_0_%p.log -XX:ReplayDataFile=replay_modules_java_xml_0_%p.log -XX:CompileCommand=exclude,java/lang/invoke/MethodHandle.* -XX:PerMethodTrapLimit=0 -XX:PerMethodSpecTrapLimit=0 -XX:-StackTraceInThrowable -XX:+IgnoreUnrecognizedVMOptions -XX:-ZapUnusedHeapArea -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressIncrementalInlining -XX:StressSeed=1714839818 -XX:CompileCommand=memlimit,*.*,0 sun.hotspot.tools.ctw.CompileTheWorld modules:java.xml

      Host: AMD EPYC 7J13 64-Core Processor, 12 cores, 23G, Oracle Linux Server release 7.9
      Time: Wed Apr 23 05:04:11 2025 UTC elapsed time: 17.242176 seconds (0d 0h 0m 17s)

      --------------- T H R E A D ---------------

      Current thread (0x00007f42701a3170): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=9277, stack(0x00007f42dc901000,0x00007f42dca01000) (1024K)]


      Current CompileTask:
      C2:17242 4013 b com.sun.org.apache.xalan.internal.xsltc.compiler.AbsolutePathPattern::translate (365 bytes)

      Stack: [0x00007f42dc901000,0x00007f42dca01000], sp=0x00007f42dc9fc0d0, free space=1004k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x94789e] LateInlineVirtualCallGenerator::set_callee_method(ciMethod*)+0x4e (callGenerator.cpp:473)
      V [libjvm.so+0x956049] CallDynamicJavaNode::Ideal(PhaseGVN*, bool)+0x359 (callnode.cpp:1240)
      V [libjvm.so+0x17b5add] PhaseIterGVN::transform_old(Node*)+0xbd (phaseX.cpp:668)
      V [libjvm.so+0x17ab724] PhaseIterGVN::optimize()+0xb4 (phaseX.cpp:1054)
      V [libjvm.so+0xb0998f] Compile::Optimize()+0xa6f (compile.cpp:2482)
      V [libjvm.so+0xb0cd2b] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1f0b (compile.cpp:860)
      V [libjvm.so+0x93b2d7] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x467 (c2compiler.cpp:141)
      V [libjvm.so+0xb1a7d8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xb58 (compileBroker.cpp:2307)
      V [libjvm.so+0xb1b9a8] CompileBroker::compiler_thread_loop()+0x578 (compileBroker.cpp:1951)
      V [libjvm.so+0x1068abb] JavaThread::thread_main_inner()+0x13b (javaThread.cpp:773)
      V [libjvm.so+0x1a96266] Thread::call_run()+0xb6 (thread.cpp:231)
      V [libjvm.so+0x17273f8] thread_native_entry(Thread*)+0x128 (os_linux.cpp:875)

            Assignee:
            Damon Fenacci
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: